<resources>
    <string name="app_name">Calculator</string>
    <string name="action_unit_conversion">Conversion</string>
    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>
    <string name="clear">C</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="point">.</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="delete">backspace</string>

    <string name="left_parenthese">(</string>
    <string name="right_parenthese">)</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="x">n!</string>
    <string name="cube">^</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="DRG">DRG</string>

    <string name="setting_help">这是一个帮助界面</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
